# Ignovex

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
dashboard/: index.html  package.json
dashboard/src/: App.tsx  types.ts
dashboard/src/components/: HolderDistribution.tsx  RiskGauge.tsx  SignalBreakdown.tsx
ignovex/: __init__.py  classifier.py  models.py  scorer.py  signals.py
ignovex/utils/: __init__.py  helpers.py
tests/: conftest.py  test_classifier.py  test_helpers.py  test_models.py  test_scorer.py  test_signals.py
